# UYUBox

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  _winapi.py  audit-ledger.jsonl  buildozer.spec  conftest.py  coverage.ini  demo_secure.py  main.py  mypy.ini  policy_report.md  proguard-rules.pro  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sbom.json  security_compliance_report.md  setup.py  start_zilant.ps1
.github/workflows/: build-apk.yml  ci.yml  fuse.yml  static-analysis.yml
.hypothesis/constants/: 5c7875f9853a314a  8270ed43bfbd6636  b08d257cb2c44e40
.semgrep/custom/: heal-no-rm.yml
app/screens/: audit.py  file_chooser.py  home.py  secure_share.py  workflows.py
app/services/: audit.py  crypto_manager.py  environment.py  secure_share.py  workflows.py
argon2/: __init__.py  exceptions.py  low_level.py
audit/: logger.py
coverage/: coverage.xml
crypto_core/: hybrid.py  profiles.py
cryptography/: __init__.py  exceptions.py
cryptography/hazmat/: __init__.py
cryptography/hazmat/primitives/: __init__.py  hashes.py  poly1305.py  serialization.py
docs/: ARCH.md  QUANTUM_SECURITY.md  README.md  api.rst  conf.py  index.rst
filelock/: __init__.py
flask/: __init__.py
hvac/: __init__.py
hypothesis/: __init__.py  strategies.py
hypothesis/internal/: __init__.py  reflection.py
hypothesis/internal/conjecture/: __init__.py  utils.py
integrity/: validator.py
mobile/android/zilantjni/: CMakeLists.txt
nacl/bindings/: __init__.py
p4a-recipes/argon2-cffi/: __init__.py
p4a-recipes/cryptography/: __init__.py
prometheus_client/: __init__.py
requests/: __init__.py
security/: android_security.py  biometric.py  controller.py  policy.py  resources.py  runtime_checks.py  session.py  validation.py  watchdog.py
src/: aead.py  aead_fallback.py  container.py  pqcrypto.py  shamir.py  yaml.py
src/universal_app/: __init__.py  cli.py
src/uyubox_core/: bench_zfs.py  cli.py  cli_commands.py  tray.py  watchdog.py  zil_mobile_api.c
src/uyubox_core/container/: __init__.py  pack.py  unpack.py
src/uyubox_core/crypto/: aead.py  g_new.py  kdf.py
src/uyubox_core/self_heal/: heal.py  monitor.py  reaction.py
src/uyubox_core/utils/: anti_snapshot.py  formats.py  logging.py  secure_logging.py
src/uyubox_gui/: main.py  translations.py
src/zilant_prime_core/: metrics.py  tray.py  zilfs.py
tabulate/: __init__.py
tests/: conftest.py  test_adaptive_decoy.py  test_aead.py  test_aead_branches.py  test_aead_extra.py  test_aead_negative.py  test_anti_snapshot.py  test_anti_snapshot_extra.py  test_app.py  test_attestation.py  test_audit_ledger.py  test_audit_logger.py  test_bench.py  test_bench_zfs.py  test_branch_cover.py  test_cli_additional.py  test_cli_additional_branches.py  test_cli_branches.py  test_cli_cleanup.py  test_cli_commands.py  test_cli_commands_extra.py  test_cli_confirm_full.py  test_cli_decoy.py  test_cli_dest_exists_dir.py  test_cli_error_branches.py  test_cli_errors.py  test_cli_extra_branches.py  test_cli_fingerprint.py  test_cli_full_coverage.py  test_cli_helpers.py  test_cli_integration.py  test_cli_key_audit.py  test_cli_more.py  test_cli_negative.py  test_cli_negative_more.py  test_cli_observability.py  test_cli_output.py  test_cli_overwrite_flags.py  test_cli_pq.py  test_cli_pseudohsm.py  (+163 more)
tests/fuzz/: test_container_fuzz.py
tests/perf/: benchmark_kyber.py
tests/self_heal/: test_auto_heal.py  test_fractal_unique.py
tests/self_heal2/: test_cli_scan_recursive.py  test_heal_limit_freeze.py  test_heal_race.py  test_heal_recovery_key.py  test_heal_success.py  test_zkp_roundtrip.py
tools/: atheris_fuzz.py  gen_cli_docs.py  import_graph.py  license_audit.py  policy_validator.py  vulnerability_scanner.py
typings/PySide6/: QtWidgets.pyi
ui/: main.kv  wizard.py
ui/pyqt/: main.py
workflow/: recipes.py
zstandard/: __init__.py
(+12 files in other folders)
