[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-app"
version = "0.1.0"
description = "Simple universal PC encryption tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["cryptography>=41.0", "click>=8.1"]

[project.scripts]
pc-app = "universal_app.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
