# pyproject.toml
# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors

[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name            = "zilant-prime-core"
version         = "0.9.9b2"
description     = "ZILANT Prime™ core: AEAD, Argon2id, Phase-VDF, .zil container, CLI & GUI"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "Ильдар", email = "you@example.com" }]
keywords        = ["crypto", "VDF", "AEAD", "secure-storage"]
classifiers     = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security :: Cryptography",
  "Typing :: Typed",
]

# Основные зависимости
dependencies = [
  "cryptography>=38.0.4,<43.0",
  "argon2-cffi>=23.1,<24.0",
  "click>=8.1,<9.0",
  "hvac>=2.3,<3.0",
  "flask>=2.2,<3.0",
  "prometheus-client>=0.16.0,<1.0",
  "shamir>=0.1",
  "pynacl>=1.5,<2.0",
  "boto3>=1.28,<2.0",
  "PyYAML>=6.0,<7.0",
  "zstandard>=0.23.0",
  "tqdm>=4.66.0",
  "psutil>=5.9.0",
  "requests>=2.32,<3.0",
  "PySide6>=6.9.1,<7.0",  # GUI
]

# CLI-скрипты
[project.entry-points."console_scripts"]
"zilant" = "zilant_prime_core.cli:cli"
"uyubox" = "zilant_prime_core.cli:cli"

# GUI-скрипт
[project.entry-points."gui_scripts"]
"uyubox-gui" = "uyubox_gui.main:main"

# Опциональные зависимости
[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.0",
  "pytest-xdist>=3.5.0",
  "hypothesis>=6.0.0",
]
dev = [
  "ruff>=0.2.0",
  "black>=23.1.0",
  "isort>=5.10.1",
  "mypy>=1.8.0",
  "pyinstaller>=6.0",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.0.0",
  "mkdocs>=1.0.0",
]
pq = [
  "pypqc>=0.0.6.2",
]
zkp = [
  "python-libsnark>=0.3.3",
]
legacy = []
cli = [
  "click>=8.1,<9.0",
]
metrics = [
  "flask>=2.2,<3.0",
  "prometheus-client>=0.16.0,<1.0",
]
notify = [
  "slack-sdk>=3.21.0",
  "python-telegram-bot>=20.0",
]
zilfs = [
  "fusepy>=3.0.0",
]
tray = [
  "pystray>=0.19.5,<0.20.0",  # <-- фикс на существующую версию
  "Pillow>=9.0.0,<10.0.0",
]

[tool.setuptools.packages.find]
where      = ["src"]
namespaces = false

[tool.setuptools]
ext-modules = [
  { name = "zilant_prime_core.utils.crypto_core", sources = ["src/zilant_prime_core/utils/crypto_core.c"], language = "c" },
  { name = "zilant_prime_core.utils.hardening",    sources = ["src/zilant_prime_core/utils/hardening.c"],     language = "c" },
  { name = "zilant_prime_core.zil_mobile_api",      sources = ["src/zilant_prime_core/zil_mobile_api.c"],     language = "c" },
]

[tool.black]
line-length    = 120
target-version = ["py310", "py311"]

[tool.isort]
profile                = "black"
line_length            = 120
known_first_party      = ["zilant_prime_core"]
known_standard_library = ["tomllib"]

[tool.ruff]
line-length = 120
select      = ["E", "F", "W", "C90", "B"]
ignore      = ["E402", "B904", "C901"]

[tool.mypy]
python_version           = "3.13"
strict                   = true
allow_untyped_decorators = true
warn_return_any          = false
ignore_missing_imports   = true
disable_error_code       = ["attr-defined"]
exclude                  = '(^(src/zil\.py)|^scripts/)'
